@@ -23,6 +23,8 @@
 #include <config.h>
 
 #include <gtk/gtk.h>
+#include <glib.h>
+#include <glib/gprintf.h>
 #include <glib/gi18n.h>
 #include <string.h>
 
