@@ -1,3 +1,10 @@
+2008-01-05  Christian Kirbach <Christian.Kirbach@googlemail.com>
+  
+	* pixmaps/24x24/Makefile.am (update-icon-cache): 
+	* pixmaps/scalable/Makefile.am (update-icon-cache): run gtk-update-icon-cache for
+  	install-hook and uninstall-hook. Fixes #436204
+	Original patch by Brian Pepple <bpepple@fedoraproject.org>
+
 2007-12-14  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/baobab.c: start processing the uri given on command line in
